syntax = "proto3";

import "scalapb/scalapb.proto";
import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

package server.grpc.chat;

service ChatRoom {

  rpc Post (stream ClientCmd) returns (stream ServerCmd) {}
}

option (scalapb.options) = {
  lenses: true,
  preserve_unknown_fields: false,
  no_default_values_in_constructor: false,
  no_primitive_wrappers: true,
  single_file: true,
  preamble: "sealed trait Cmd extends scalapb.GeneratedMessage"
};

message UserInfo {
  string user = 1 [(scalapb.field).type = "shared.Domain.Participant"];
  bytes pubKey = 2;
}

message Coords {
  double lat = 1;
  double lon = 2;
}

message ClientCmd {
  option (scalapb.message).extends = "Cmd";
  string chat = 1 [(scalapb.field).type = "shared.Domain.ChatName"];
  map<string, bytes> content = 2;
  UserInfo userInfo = 3 [(scalapb.field).no_box = true];
  Coords coords = 4 [(scalapb.field).no_box = true];
  string otp = 5 [(scalapb.field).type = "shared.Domain.Otp"];
}

message ServerCmd {
  option (scalapb.message).extends = "Cmd";
  string chat = 1 [(scalapb.field).type = "shared.Domain.ChatName"];
  map<string, bytes> content = 2;
  UserInfo userInfo = 3 [(scalapb.field).no_box = true];
  string requestTimeUuid = 4;
}

message ChangeDataCapture {

  oneof payload {
    CreateChat create = 1;
    AddParticipant add = 2;
    Connected con = 3;
    Disconnected discon = 4;
    PostMsg postMsg = 5;
  }

  message CreateChat {
    string chat = 1 [(scalapb.field).type = "shared.Domain.ChatName"];
  }

  message AddParticipant {
    //a comma separated list of users: a,b,c
    string participantStr = 1;
    
    string chat = 2 [(scalapb.field).type = "shared.Domain.ChatName"];
  }

  message Connected {
    string user = 1 [(scalapb.field).type = "shared.Domain.Participant"];
    string otp = 2 [(scalapb.field).type = "shared.Domain.Otp"];
  }

  message Disconnected {
    string user = 1 [(scalapb.field).type = "shared.Domain.Participant"];
    string otp = 2 [(scalapb.field).type = "shared.Domain.Otp"];
  }

  message PostMsg {
    map<string, bytes> content = 1;
    UserInfo userInfo = 2 [(scalapb.field).no_box = true];
  }
}
